bk_ida/gccida/g0/init_caller_save
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_caller_save/src/caller-save.c:575:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v0; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_caller_save/src/caller-save.c:577:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v2; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_caller_save/src/caller-save.c:593:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+44h] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_caller_save/src/caller-save.c:651:35: error: use of undeclared identifier 'machine_mode'
address = gen_rtx_fmt_ee( PLUS, ( machine_mode)v4, addr_reg, v3); 
                                  ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_caller_save/src/obj/caller-save.o] Error 1
